<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/iconButton"
                    style="?attr/materialIconButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/navigation_screen_title"
                    app:icon="@drawable/menu_icon_48px_bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/logo" />

                <com.google.android.material.search.SearchBar
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:hint="@string/search_bar_hint" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">
                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    app:singleLine="true"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">
                </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/add_icon_48px_bold"
            style="?attr/floatingActionButtonLargeStyle"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/cl_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:background="@color/material_on_primary_emphasis_medium"
            android:alpha="0"
            android:visibility="gone">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:orientation="vertical">

            <Button
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:id="@+id/elevatedButton_addRecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/add_recipe_title"
                android:layout_gravity="right"
                />

            <Button
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:id="@+id/elevatedButton_manageCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/manage_categories_title"
                android:layout_gravity="right"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floating_action_button_back"
                style="?attr/floatingActionButtonLargePrimaryStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                app:srcCompat="@drawable/back_icon_48px_bold"
                android:layout_gravity="right"/>
            </LinearLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>